2002-05-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m: ([URLHandleClassForURL:]) Fix to return most
	recently registered class rather than first registered one.
	Bug report via savannah

2002-04-30  Adam Fedor  <fedor@gnu.org>

	* Version: 1.3.2
	* Documentation/news.texi: Update.
	* NEWS Regen.

2002-04-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Standardise handling for windoze drive
	specifiers in file paths.
	* Source/NSUser.m: Use ([-stringWithFileSystemRepresentation:length:])
	when importing file names.
	* Source/NSString.m: Update all path handling methods for windoze 
	changes.  Fix several bugs where we did not conform to documentation.

2002-04-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Port
	([-stringWithFileSystemRepresentation:length:]) to windoze...
	Have it convert backslashes to slashes etc.

2002-04-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Improve handling of identifier mapping so that
	an identifier mapped to an empty string (or //) an any place where
	whitespace is permissable is treated as part of that white space.

2002-04-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Interpret a mapping to '//' in the WordMap as
	meaning that the rest of the line containing the mapped value
	should be ignored.

2002-04-24  Gregory John Casamento <greg_casamento@yahoo.com>

	* Tools/make_strings/GNUmakefile - modified to prevent build
	error when building from scratch
	* Tools/make_strings/GNUmakefile.preamble - added to provide
	paths to include and lib directories for linking make_strings
	tool when building from scratch.
	
2002-04-23  Adam Fedor  <fedor@gnu.org>

	* Source/GSFFIInvocation.m
	(-initWithCallback:returnp:values:frame:signature:): Simplify
	setting values. Structs passed by ref when MFRAME_STRUCT_BYREF.
	(GSFFIInvokeWithTargetAndImp): Encoding values unneedded now.
	(gs_objc_msg_forward): Free the closure via NSData.
